Fix words overflowing

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -39,6 +39,7 @@
 .tab-item-inner {
   display: flex;
   flex-direction: column;
+  word-break: break-all;
 }
 
 .tab-item-upper-row {
